# game-backend

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: main.yaml
api/: serializers.py  tests.py  urls.py  views.py
contentmanagement/: admin.py  apps.py  models.py  urls.py  views.py
contentmanagement/migrations/: 0001_initial.py  0002_seed_data.py  0003_alter_solution_options.py
contentmanagement/templates/: base.html  index.html  navbar.html  questions.html
contentmanagement/templatetags/: filters.py
core/: .env.template  hooks.py  settings.py  urls.py
docker/: .env.dev  .env.test  docker-compose.yml
docker/app/: Dockerfile  entrypoint.sh  start-dev-server.sh
docker/db/psql-init/: db.sql
game_match/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
game_match/migrations/: 0001_initial.py
game_match/templates/: game_match.html
requirements/: base.txt  dev.txt
smartnonsense/: admin.py  apps.py  models.py  urls.py  views.py
smartnonsense/migrations/: 0002_alter_solutionstep_result_alter_solutionstep_title.py
smartnonsense/templates/: base.html  questions.html
